Improve jUnit integration (cherry-picked from poludov:improve-junit-integration)